<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FeedBack">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/version_1_0_0"
            android:gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/fbtv2x"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/contact_us"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fbtv2x"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/github"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/github"
            android:elevation="10dp"
            android:src="@drawable/ic_github_new" />

        <ImageButton
            android:id="@+id/mail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/mail"
            android:elevation="10dp"
            android:src="@drawable/ic_mail_new" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/members"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_linkedin_new"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:autoLink="web"
            android:text="@string/vpraLI"
            tools:ignore="UseCompatTextViewDrawableXml" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_linkedin_new"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:autoLink="web"
            android:text="@string/arsathLI"
            tools:ignore="UseCompatTextViewDrawableXml" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_linkedin_new"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:autoLink="web"
            android:text="@string/ahamedLI"
            tools:ignore="UseCompatTextViewDrawableXml" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:backgroundTint="@color/skyblue" />
</RelativeLayout>